--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -530,7 +530,6 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
-allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -545,6 +544,7 @@ allow 185.246.189.130;
 allow 185.246.189.77;
 allow 185.246.189.99;
 allow 185.246.86.197;
+allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -1165,6 +1165,7 @@ allow 2605:6400:30:f174:1111:2222:3333:4444;
 allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
+allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
@@ -1422,7 +1423,6 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f02::1125;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1455,6 +1455,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
@@ -1665,6 +1666,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
@@ -1755,7 +1757,6 @@ allow 3.71.175.220;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.74.97;
-allow 37.220.84.85;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1915,7 +1916,6 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
 allow 72.14.179.10;
-allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1958,6 +1958,7 @@ allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 85.17.9.83;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.205.5.107;
 allow 87.118.110.27;
