--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -200,9 +200,8 @@ allow 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
 allow 2605:6400:30:f174:1111:2222:3333:4444;
-allow 2605:6400:30:f174::42;
+allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174:42:42::;
-allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
@@ -422,6 +421,7 @@ allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
@@ -729,7 +729,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -784,4 +783,5 @@ allow 2a12:dd47:8513::a;
 allow 2a12:dd47:8513::b;
 allow 2a12:dd47:8513::c;
 allow 2a12:dd47:8513::d;
+allow 2a12:dd47:8513::e;
 allow 2a13:d207:0:461::1;
