--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -201,7 +201,9 @@ allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
 allow 2605:6400:30:f174:1111:2222:3333:4444;
 allow 2605:6400:30:f174:1:2:3:4;
+allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
+allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
@@ -403,6 +405,7 @@ allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -417,7 +420,6 @@ allow 2a00:1dc0:caff:83::a43b;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
-allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
