--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.29.12.123;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -149,6 +148,7 @@ set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 146.59.126.232;
+set_real_ip_from 146.70.164.212;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 147.78.67.73;
@@ -158,7 +158,6 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
-set_real_ip_from 15.204.224.241;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.184.100;
@@ -265,7 +264,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.55.71.119;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.232.109.133;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -314,6 +312,7 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.156.172.34;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -1167,7 +1166,9 @@ set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
 set_real_ip_from 2605:6400:30:f174:1:2:3:4;
+set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
+set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
@@ -1370,6 +1371,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
@@ -1384,7 +1386,6 @@ set_real_ip_from 2a00:1dc0:caff:83::a43b;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:da00:f23d:8f00::1;
-set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1757,7 +1758,6 @@ set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.135;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.175.193.215;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 3.71.175.220;
 set_real_ip_from 37.120.239.59;
@@ -1870,7 +1870,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1897,10 +1896,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.147.189.0;
-set_real_ip_from 54.156.92.17;
-set_real_ip_from 54.162.72.148;
-set_real_ip_from 54.165.15.213;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1912,7 +1907,6 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
