--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -203,7 +203,6 @@ allow 2605:6400:30:f174:1111:2222:3333:4444;
 allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
-allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
@@ -732,6 +731,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
