--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -169,6 +169,7 @@ allow 154.213.184.44;
 allow 154.213.184.5;
 allow 154.213.184.63;
 allow 154.213.184.7;
+allow 154.213.184.70;
 allow 154.213.184.74;
 allow 154.213.184.79;
 allow 154.213.184.87;
@@ -308,6 +309,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.192.178;
 allow 185.170.114.25;
@@ -1086,6 +1088,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1692,7 +1695,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1759,6 +1761,7 @@ allow 2a12:dd47:8513::10;
 allow 2a12:dd47:8513::11;
 allow 2a12:dd47:8513::12;
 allow 2a12:dd47:8513::13;
+allow 2a12:dd47:8513::14;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
@@ -1797,6 +1800,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1943,6 +1947,7 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
@@ -2007,7 +2012,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
