--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,6 +122,7 @@ allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:cdc0:c004::d44:d46f;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -727,7 +728,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -794,6 +794,7 @@ allow 2a12:dd47:8513::10;
 allow 2a12:dd47:8513::11;
 allow 2a12:dd47:8513::12;
 allow 2a12:dd47:8513::13;
+allow 2a12:dd47:8513::14;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
