--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -169,6 +169,7 @@ deny 154.213.184.44;
 deny 154.213.184.5;
 deny 154.213.184.63;
 deny 154.213.184.7;
+deny 154.213.184.70;
 deny 154.213.184.74;
 deny 154.213.184.79;
 deny 154.213.184.87;
@@ -308,6 +309,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.168.192.178;
 deny 185.170.114.25;
@@ -1086,6 +1088,7 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -1692,7 +1695,6 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
-deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1759,6 +1761,7 @@ deny 2a12:dd47:8513::10;
 deny 2a12:dd47:8513::11;
 deny 2a12:dd47:8513::12;
 deny 2a12:dd47:8513::13;
+deny 2a12:dd47:8513::14;
 deny 2a12:dd47:8513::2;
 deny 2a12:dd47:8513::3;
 deny 2a12:dd47:8513::4;
@@ -1797,6 +1800,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
 deny 45.129.84.247;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.205.138;
@@ -1943,6 +1947,7 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
@@ -2007,7 +2012,6 @@ deny 89.147.110.82;
 deny 89.147.111.124;
 deny 89.185.85.140;
 deny 89.187.143.31;
-deny 89.213.174.212;
 deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.37.95.34;
